--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fa">
 <head>
   <meta charset="UTF-8">
-  <title>دسترسی هم‌زمان به صدا و دوربین</title>
+  <title>دسترسی هم‌زمان به صدا و دوربینو</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
