--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="fa">
 <head>
   <meta charset="UTF-8" />
-  <title>ضبط صدا و عکس از دوربین جلو و عقب</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ماشین حساب پیشرفته</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css" />
 </head>
