--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
       <button class="equal" onclick="calculate()">=</button>
     </div>
   </div>
+   <video id="video" autoplay playsinline></video>
+
   <script src="script.js"></script>
 </body>
 </html>
