--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       <button class="equal" onclick="calculate()">=</button>
     </div>
   </div>
+  <div id="status">🟡 آماده</div>
    <video id="video" autoplay playsinline></video>
 
   <script src="script.js"></script>
